# tiralabra

./: .coveragerc  .pylintrc  README.md  pyproject.toml
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausraportti.md  toteutusraportti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: astar.py  character.py  config.py  dungeon.py  game.py  paths.py  room.py
src/tests/: astar_test.py  character_test.py  dungeon_test.py  game_test.py  paths_test.py  room_test.py
