[project]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = [
    {name = "Lauri Huldin",email = "127834326+LHuldin@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
