[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Lauri Huldin <127834326+LHuldin@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pygame = ">=2.6.1,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.7.1"
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
